added hard coded items to the list

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
         </div>
         <div class="list-container">
             <ul id="scores">
+                <li>Name: Score</li>
+                <li>Name: Score</li>
+                <li>Name: Score</li>
             </ul>
         </div>
     </div>
