--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
          </div>
          <div class="list-container">
              <ul id="scores">
+                <li>name: score</li>
              </ul>
          </div>
      </div>
