--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&family=Open+Sans:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1>Leaderboard</h1>
+   <section class="flex">
+    <div class="left">
+        <div class="recent-scores">
+            <h3>Recent scores</h3>
+        <button type="submit" class="refresh" value="Refresh">Refresh</button>
+        </div>
+        <div class="list-container">
+            <ul id="scores">
+            </ul>
+        </div>
+    </div>
+    <div class="right">
+        <div class="container-2">
+            <h3>Add your score</h3>
+        <form action="submit">
+            <input type="text" name="name" id="name" placeholder="Your name" required>
+            <input type="number" name="score" id="score" placeholder="Your score" required>
+            <input type="button" id="submit" value="Submit">
+        </form>
+        </div>
+    </div>
+   </section>
+   <footer>vvvvvvvvvvvvvvvvvvvvvvvvvvv</footer>
    <script type="module" src="script.js" refer></script>
 </body>
 </html>
